--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ set(CPACK_PACKAGE_CONTACT "arwed.mett@googlemail.com")
 if(APPLE)
 	set(CPACK_GENERATOR "TGZ;ZIP;productbuild")
 elseif(UNIX)
-	set(CPACK_GENERATOR "TGZ;ZIP;RPM;DEB")
+	set(CPACK_GENERATOR "TGZ;ZIP")
 elseif(WIN32)
 	set(CPACK_GENERATOR "ZIP;NSIS;NSIS64")
 else()
