added debian and rpm to cpack

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ message(STATUS "Package name: ${CPACK_PACKAGE_FILE_NAME}")
 if(APPLE)
 	set(CPACK_GENERATOR "TGZ;ZIP;productbuild")
 elseif(UNIX)
-	set(CPACK_GENERATOR "TGZ;ZIP")
+	set(CPACK_GENERATOR "TGZ;ZIP;RPM;DEB")
 elseif(WIN32)
 	set(CPACK_GENERATOR "ZIP;NSIS;NSIS64")
 else()
