--- a/.core.yml
+++ b/.core.yml
@@ -4,46 +4,46 @@ name: default
 steps:
 
 - name: build
-  image: pfeifenjoy/logging.h
-  commands:
-  - mkdir build
-  - cd build
-  - cmake ..
-  - cmake --build .
-  - cd ..
+    image: pfeifenjoy/logging.h
+    commands:
+        - mkdir build
+        - cd build
+        - cmake ..
+        - cmake --build .
+        - cd ..
 
 - name: test
-  image: pfeifenjoy/logging.h
-  commands:
-  - cd build
-  - ctest --verbose .
-  - cd ..
+    image: pfeifenjoy/logging.h
+    commands:
+        - cd build
+        - ctest --verbose .
+        - cd ..
 
 - name: memcheck
-  image: pfeifenjoy/logging.h
-  commands:
-  - valgrind --leak-check=yes --error-exitcode=1 ./build/example
+    image: pfeifenjoy/logging.h
+    commands:
+        - valgrind --leak-check=yes --error-exitcode=1 ./build/example
 
-- name: package
-  image: pfeifenjoy/logging.h
-  commands:
-  - cd build
-  - cpack .
-  - cd ..
+- name: linux
+    image: pfeifenjoy/logging.h
+    commands:
+        - cmake --config Release -H. -Bbuild/linux64
+        - cmake --build build/linux64 --target package
 
 - name: gitea_release
-  image: plugins/gitea-release
-  settings:
-    api_key:
-        from_secret: gitea_token
-    base_url: https://gitea.metthub.de
-    files: build/logging.h-*
-  checksum:
-    - md5
-    - sha1
-    - sha256
-    - sha512
-    - adler32
-    - crc32
-  when:
-    event: tag
+    image: plugins/gitea-release
+    settings:
+        api_key:
+            from_secret: gitea_token
+        base_url: https://gitea.metthub.de
+        files:
+            - build/linux64/logging.h-*
+    checksum:
+        - md5
+        - sha1
+        - sha256
+        - sha512
+        - adler32
+        - crc32
+    when:
+        event: tag
